git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@535 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/carteras/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/carteras/startup.vm
@@ -230,7 +230,7 @@
                                                                             <td width="95">Moneda</td>
                                                                             <td width="150"><SELECT NAME="moneda" style="width:150px;"></SELECT></td>
                                                                             <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_moneda"></td>
-                                                                            <td width="80" class="fecha_nc">Fecha</td>
+                                                                            <td width="80" class="fecha_nc">Fecha Actual</td>
                                                                             <td width="180" class="fecha_nc">
                                                                                 <INPUT TYPE="text" name="fecha_pago" style="width:180px;" title="Ingrese la fecha del pago">
                                                                             </td>
