--- a/erp-quimicos/src/main/webapp/vm/crmcontactos/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/crmcontactos/startup.vm
@@ -4,7 +4,7 @@
         <title>${title}</title>
         
         #include("${layoutheader}")
-		
+	
         <!--  css for this catalogo -->
         <link rel="stylesheet" href="../../css/modalbox/crmcontactos/formaCrmContactos.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/crmcontactos/formaBuscaCliente_Prospecto.css" type="text/css" />
@@ -36,7 +36,7 @@
         <!--Esta tabla va  en la barra de buscador -->
 		<table border="0" class="tabla_buscador" style="display:none">
 			<tr>
-			   <td colspan="12">&nbsp;&nbsp;</td>
+			   <td colspan="17">&nbsp;&nbsp;</td>
 			</tr>
 			
 			<tr>
@@ -53,6 +53,15 @@
                                         <option value="2">Prospecto</option>
                                     </select>
                                 </td>
+                                <td width="10">&nbsp;&nbsp;</td>
+                                <td>Agente</td>
+				<td width="10">&nbsp;&nbsp;</td>
+                                <td>
+                                    <select name="busqueda_agente" style="width:145px;" >
+                                        <option value="1">Cliente</option>
+                                        <option value="2">Prospecto</option>
+                                    </select>
+                                </td>
                                 <td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><INPUT TYPE="button" value="Buscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -60,7 +69,7 @@
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 			</tr>
 			<tr>
-				<td colspan="12">&nbsp;&nbsp;</td>
+				<td colspan="17">&nbsp;&nbsp;</td>
 			</tr>
 		</table>
         <table class="acciones">
@@ -117,8 +126,10 @@
                                                 <td width="100">Folio</td>
                                                 <td width="150"><INPUT TYPE="text" name="folio" style="width:145px;"></td>
                                                 <td width="25"></td>
-                                                <td width="100"></td>
-                                                <td width="150"></td>
+                                                <td width="100">Agente</td>
+                                                <td width="150">
+                                                    <select name="select_agente" style="width:145px;" />
+                                                </td>
                                                 <td width="25"></td>
                                                 <td width="5"></td>
                                             </tr>
